# digipin

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDABOT_INFO.md  DIGIPIN_Technical_Document.md  DOCUMENTATION.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SETUP_COMPLETE.md  codecov.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  javascript-tests.yml  publish.yml  tests.yml  unified-ci.yml
digipin/: __init__.py  cli.py  django_ext.py  fastapi_ext.py  neighbors.py  pandas_ext.py  polyfill.py  utils.py  validator.py
docs/: BUILD_GUIDE.md  DOCUMENTATION.md  getting-started.md  index.md  polyfill_optimization.md  vision_expansion.md
examples/: advanced_usage.py  delivery_app.py  neighbor_discovery.py
javascript/: CHANGELOG.md  README.md  digipin.d.ts  digipin.js  package-lock.json  package.json
python/: CHANGELOG.md  README.md  pyproject.toml  setup.py
python/examples/: flask_example.py  pandas_usage.py
python/src/digipin/: __init__.py  cli.py  fastapi_ext.py  flask_ext.py  utils.py  viz.py
python/tests/: test_core_edge_cases.py  test_flask_integration.py  test_polyfill_complete.py  test_viz_complete.py
src/digipin/: __init__.py  cli.py  decoder.py  encoder.py  fastapi_ext.py  utils.py  viz.py
tests/: test_neighbors.py  test_official_spec.py  test_pandas_integration.py  test_polyfill.py
tests/data/: test_vectors.json
